# cxx-starter

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  create-comp.sh  create-module.sh  setup.sh  vcpkg-deps.lst
cmake/: define-targets.cmake
scripts/: compile-proto.sh  setup-deps.sh  setup-vcpkg.sh  utils.sh
